# base64-tool

./: CHALLENGES.md  Justfile  README.md  pyproject.toml
src/: __init__.py  analyze.py  cli.py  constants.py  detector.py  encoders.py  entropy.py  formatter.py  magic.py  peeler.py  recipe.py  streaming.py  utils.py
tests/: test_analyze.py  test_cli.py  test_detector.py  test_encoders.py  test_entropy.py  test_magic.py  test_peeler.py  test_properties.py  test_recipe.py  test_streaming.py
